// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Circle > should render 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-2 px-4 w-10 h-10 align-middle rounded-full border-2 transition-all duration-100 ring-6 ring-theme-background"
  />
</div>
`;

exports[`Circle > should render as avatar 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-2 px-4 w-10 h-10 align-middle rounded-full border-0 transition-all duration-100 bg-theme-info-200 ring-6 ring-theme-background"
  />
</div>
`;

exports[`Circle > should render extra-large 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-1 px-2 w-16 h-16 text-lg align-middle rounded-full border-2 transition-all duration-100 ring-6 ring-theme-background"
  />
</div>
`;

exports[`Circle > should render large 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-1 px-2 w-11 h-11 align-middle rounded-full border-2 transition-all duration-100 ring-6 ring-theme-background"
  />
</div>
`;

exports[`Circle > should render small 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 transition-all duration-100 ring-6 ring-theme-background"
  />
</div>
`;

exports[`Circle > should render with content 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 transition-all duration-100 ring-6 ring-theme-background"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle > should render with no shadow 1`] = `
<div>
  <div
    class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 ring-theme-background"
  />
</div>
`;
